[tool.poetry]
name = "discord-bot"
version = "3.0"
description = "Discord bot for Tech With Tim's discord server."
authors = ["Tech With Tim Community"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"
asyncpg = "^0.27.0"
beautifulsoup4 = "^4.11.1"
"discord.py" = ">=2.0.1"
html5lib = "^1.1"
inflect = "^6.0.2"
jishaku = { version=">=2.5.1", extras=["procinfo", "profiling"] }
pandas = "^1.5.1"
pydantic = { version="^1.10.2", extras=["dotenv"] }
python-dateutil = "^2.8.2"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120
