[tool.poetry]
name = "discord-bot"
version = "3.0"
description = "Discord bot for Tech With Tim's discord server."
authors = ["Tech With Tim Community"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
html5lib = "^1.1"
aiohttp = "^3.8.3"
inflect = "^6.0.2"
pandas = "^1.5.1"
asyncpg = "^0.27.0"
tabulate = "^0.9.0"
"discord.py" = ">=2.0.1"
beautifulsoup4 = "^4.11.1"
python-dateutil = "^2.8.2"
pydantic = { version="^1.10.2", extras=["dotenv"] }
jishaku = { version=">=2.5.1", extras=["procinfo", "profiling"] }

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.10.0"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
bot = "cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120
